<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label for Book Name-->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantity_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/activity_editor_quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#7C4DFF" />

        <TextView
            android:id="@+id/decrease_text_view"
            style="@style/QuantityArrowsStyle"
            android:layout_marginStart="64dp"
            android:background="@drawable/ic_arrow_downward" />

        <TextView
            android:id="@+id/edit_book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/activity_editor_default_quantity"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/increase_text_view"
            style="@style/QuantityArrowsStyle"
            android:background="@drawable/ic_arrow_upward" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/activity_editor_price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#7C4DFF" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_book_price"
            style="@style/EditorFieldStyle"
            android:layout_marginStart="80dp"
            android:hint="@string/hint_book_price"
            android:inputType="textCapWords" />

    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label for Supplier Name-->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Supplier drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_supplier"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_phone"
            android:textAppearance="?android:textAppearanceLarge" />

        <!-- Supplier Phone field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/order_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/order_oval"
        android:gravity="center"
        android:text="@string/activity_editor_order"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#FFFFFF" />

</LinearLayout>

